# CS230-distributed-machine-learning

./: README.md  Untitled.ipynb  demo.py  demo_results.py  demo_tests.py  results1.py  results3.py  s3_test.py  titanic_preprocess.yaml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
.virtual_documents/: Untitled.ipynb
ContainerMethod/: Master.Dockerfile  Worker.Dockerfile  api_test.py  docker-compose.yml  master_node.py  ml_task.proto  ml_task_pb2.py  ml_task_pb2_grpc.py  requirements.txt  requirements_worker.txt  worker_node.py
DistributedLibrary/: README.md  pyproject.toml  requirements.txt  setup.py
DistributedLibrary/DistributedML/: core.py
DistributedLibrary/distributed_ml.egg-info/: PKG-INFO  SOURCES.txt
DistributedLibrary/src/DistributedML/: __init__.py  core.py
DistributedLibrary/src/distributed_ml/: __init__.py  core.py
DistributedLibrary/src/distributed_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aws-prod/: distributed-ml.postman_collection.json  docker-compose.yml  library_testing.ipynb  requirements.txt
aws-prod/docker/: Master.Dockerfile  Scheduler.Dockerfile  Worker.Dockerfile  requirements.txt  requirements_scheduler.txt  requirements_worker.txt
aws-prod/master/: config.py  dataset_util.py  kafka_util.py  kaggle.json  logger_util.py  master.py  redis_util.py  task_handler.py
aws-prod/scheduler/: config.py  kafka_util.py  logger_util.py  redis_util.py  scheduler.py  scheduler_service.py
aws-prod/scripts/: ip_auto_update.sh  kafka_producer.py  setup.sh  (+3 more)
(+107 files in other folders)
