[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-ml"
version = "0.2.6"
authors = [{name = "Sumit Raut", email = "sumitcraut@gmail.com"}, {name = "Audrey Nguyen", email = "audrehn3@uci.edu"}, {name = "Sanjita Nayak", email = "nayaksv@uci.edu"}]
description = "A package for distributed scikit-learn tasks."
readme = "README.md"
dependencies = ["requests", "setuptools", "numpy", "pandas", "tqdm", "scikit-learn"]
requires-python = ">=3.6"

[tool.setuptools]
packages = ["distributed_ml"]
package-dir = {"" = "src"}